1 - Developed initial server and client objects

--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-sdwad
+## COMP1549 
+
+#### This repository contains the development of a CLI based network distributed system for a group-based client-server communication using Java.
